
Renamed Include.pm to ACVars.pm to be more descriptive of what its
purpose actually is.

Refactored ACVars.pm to be object-oriented using a singleton pattern.
The singleton is accessible by invoking functions on the module,
calling static methods of the class, or invoking methods on an object
instance.  More details and examples are in the POD in the module.

Bumped version to 3.0.99.0 since it's undergone some significant
changes (and breakage).
----------------------------------------------------------------------
Fri Aug 12 18:05:48 2011                        Michael Jennings (mej)

Fix bug in populating objects from a hashref.  This was causing
configuration data to be retrievable only in array form.
----------------------------------------------------------------------
Mon Aug 15 18:14:36 2011                        Michael Jennings (mej)

Work in progress:  Util.pm tests
----------------------------------------------------------------------
Tue Aug 16 09:54:03 2011                        Michael Jennings (mej)

This should fix the index generation.  Don't have unit tests for the
ObjectSet yet, so I can't say for sure....  :-)
----------------------------------------------------------------------
Tue Aug 16 16:15:52 2011                        Michael Jennings (mej)

More work on the Util.pm tests.
----------------------------------------------------------------------
Wed Aug 17 17:36:31 2011                        Michael Jennings (mej)

More work on Util.pm tests.  We're up to an even 1600 unit tests after
only 5 test sets and have already found and fixed a number of issues.
----------------------------------------------------------------------
Thu Aug 18 17:59:01 2011                        Michael Jennings (mej)

I couldn't find a reasonable way to generate tainted data, and I can't
think of a way to test examine_object(), so Util.pm tests are done.
Next is Logger, then Object.
----------------------------------------------------------------------